[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arjun-x"
version = "2.3.0"
description = "HTTP Parameter Discovery Suite"
readme = "README.md"
authors = [
  { name = "BugHunter", email = "mywebservices.preorder540@passinbox.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "requests>=2.0.0",
    "dicttoxml>=1.7.4",
    "cloudscraper>=1.2.70",
    "fake-useragent>=1.1.0",
    "ratelimit>=2.2.1",
]

[project.urls]
"Homepage" = "https://github.com/s0md3v/Arjun"
"Bug Tracker" = "https://github.com/s0md3v/Arjun/issues"

[project.scripts]
arjun = "arjun.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["arjun*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
